--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^0.14.0+5
+  provider: ^4.0.4
+  cloud_firestore: ^0.13.7
+  firebase_storage: ^3.1.6
+  firebase_database: ^3.1.6
+  firebase_core: ^0.4.5
 
 
   # The following adds the Cupertino Icons font to your application.
