--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/logo.png
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -62,7 +62,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  # fonts
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
